Upgrade to JavaFX 17, Supernaut 0.20, Micronaut 2.5.13